# machine_failure_classification

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
data/: predictive_maintenance.csv
docs/: Makefile  conf.py  index.rst  make.bat
src/data/: data_explloration.ipynb
src/models/: gardient_boosting_classifier.ipynb  get_best_model.ipynb  grid_search_results.csv  neural_net.ipynb  pipeline.ipynb  pipeline.py  random_forest.ipynb
src/models/gradient_boosting_classifier/: gardient_boosting_classifier.ipynb  gradient_boosting_classifier_2.ipynb  gradient_boosting_classifier_rs_feature.ipynb  gradient_boosting_classifier_rs_feature_encoded.ipynb
src/models/logistic_regression_classifier/: logistic_regression_gs.ipynb  logistic_regression_gs_feature.ipynb  logistic_regression_rs_feature.ipynb
src/models/neural_net/: neural_net.ipynb  neural_net_gs_feature.ipynb  neural_net_rs_feature Kopie.ipynb  neural_net_rs_feature.ipynb  neural_net_rs_feature_encoded.ipynb  neural_net_rs_feature_simplified.ipynb
src/models/random_forest/: random_forest_gs _feature.ipynb  random_forest_gs.ipynb  random_forest_rs.ipynb  random_forest_rs_feature.ipynb  random_forest_rs_feature_encoded.ipynb
